# user-note-service

./: .env.example  Cargo.toml  LICENSE  README.md  docker-compose.yaml  thunder-collection_backend_test.json
examples/: properties.yaml
migrations/2023-03-18-161751_users/: up.sql
migrations/2023-03-18-172114_notes/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/db/: actors.rs  insertables.rs  messages.rs  mod.rs  models.rs  schema.rs  utils.rs
src/login/: services.rs
src/note/: services.rs
src/routes/: mod.rs
src/routes/login/: services.rs
src/routes/note/: services.rs
src/validator/: mod.rs  validator.rs  validator_utils.rs
