[package]
name = "rust-diesel-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
argonautica = "0.2.0"
anyhow = "1.0.72"

tokio = { version = "1.26.0", features = ["full"] }
hyper = "0.14.25"